--- a/second.html
+++ b/second.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-<h1>This is my second web page</h1>    
+<h1>This is my second web page</h1> 
+<ul>
+<li>Mango</li>
+<li>Apple</li>
+<li>Watermelon</li>
+<li>Pomegranate</li></ul> 
+<ol type="a">
+<li>Maths</li>
+<li>Chemistry</li>
+<li>Computer science</li></ol>
+<audio src="horse.ogv" controls></audio> 
+<video src="movie.mp4" controls></video> 
 </body>
 </html>
